Revision history for {{ $dist->name }}

{{$NEXT}}
  [Incompatible Changes]
  - Bumpted the minimum version of Perl to v5.12.

  [Documentation]
  - Updated copyright year.

  [Toolchain]
  - Sign the distribution.

  - Removed `.travis.yml` from repo.

  - Updated MANIFEST.SKIP rules.

v1.0.1    2020-12-11 15:32:37+00:00 Europe/London
  [Toolchain]
  - Fixed error in Dist::Zilla config.

v1.0.0    2020-12-11 15:29:14+00:00 Europe/London
  [Toolchain]
  - Change distribution to use Dist::Zilla for building.

  [Other]
  - Bumped version to v1.0.0.

  - Lowered minimum Perl version to v5.8.

v0.1.1  2014-08-16

  [Documentation]
  - Added POD explaining what header injections are.

  - Added ACKNOWLEDGEMENTS section to POD.

  - Reformatted Changes.

  [Other Changes]
  - Fixed license in Makefile.PL for CPANTS.

v0.1.0  2014-06-26

  - First release on CPAN.