@@ -39,6 +39,15 @@ forging a header used for security (such as a referrer or cookie).
 The status code to return if an invalid header is found. By default,
 this is `500`.
 
+# SUPPORT FOR OLDER PERL VERSIONS
+
+Since v1.1.0, this module requires Perl v5.12 or later.
+
+Future releases may only support Perl versions released in the last ten years.
+
+If you need this module on Perl v5.8, please use one of the v1.0.x versions of this module.  Signficant bug or security
+fixes may be backported to those versions.
+
 # SEE ALSO
 
 [https://en.wikipedia.org/wiki/HTTP\_header\_injection](https://en.wikipedia.org/wiki/HTTP_header_injection)
