@@ -5,6 +5,8 @@ Revision history for {{ $dist->name }}
   - Bumpted the minimum version of Perl to v5.12.
 
   [Documentation]
+  - Documented the support policy for earlier Perl versions.
+
   - Updated copyright year.
 
   [Toolchain]
